force-app/main/default/objects/Accommodation__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account Record type is not a Product Partner - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>&quot;Product Partner&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accommodation</relationshipLabel>
    <relationshipName>Accommodation</relationshipName>
    <type>Lookup</type>
</CustomField>