force-app/main/default/objects/Accommodation__c/fields/bed_layout__c.field-meta.xml
<CustomField>
    <fullName>bed_layout__c</fullName>
    <label>Bed Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Twin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>