force-app/main/default/objects/Accommodation__c/fields/Is_cruise__c.field-meta.xml
<CustomField>
    <fullName>Is_cruise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is cruise?</label>
    <type>Checkbox</type>
</CustomField>