force-app/main/default/objects/Accommodation__c/fields/room_type__c.field-meta.xml
<CustomField>
    <fullName>room_type__c</fullName>
    <inlineHelpText>Examples: &quot;Interior State&quot;, &quot;Balcony Cabin&quot;, &quot;Studio Apartment&quot;, &quot;2 Bedroom Apartment&quot; Etc</inlineHelpText>
    <label>Room Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>