force-app/main/default/objects/Accommodation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>account__c</columns>
    <columns>class__c</columns>
    <columns>room_type__c</columns>
    <columns>bed_layout__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>The Seminyak - Beach Resort &amp; Spa</label>
</ListView>